--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,13 @@ code {
 }
 
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 * {
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
+
 body {
-    background: #1C8EF9 !important;
-    min-height: 100vh;
-    display: flex;
     font-weight: 400;
     font-family: 'Fira Sans', sans-serif;
 }
@@ -27,9 +27,34 @@ h1,h2,h3,h4,h5,h6,label,span {
     font-weight: 500;
     font-family: 'Fira Sans', sans-serif;
 }
-body, html, .App, #root, .auth-wrapper {
-    width: 100%;
+/*body, html, .App, #root, .auth-wrapper {*/
+
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
+.main-wrapper {
+    text-align: -webkit-center;
+    margin: 100px;
+    border: 1px solid blueviolet;
     height: 100%;
+}
+
+.content-wrapper {
+    padding: 20px;
+    text-align: -webkit-center;
+    margin: 30px;
+    border: 1px solid blue;
+    height: 90%;
+}
+
+.hidden {
+    display: none!important;
+}
+
+
+.navbar {
+    text-align: -webkit-center;
 }
 .navbar-light {
     background-color: #ffffff;
@@ -40,6 +65,7 @@ body, html, .App, #root, .auth-wrapper {
     justify-content: center;
     flex-direction: column;
     text-align: left;
+    margin: 300px;
 }
 .auth-inner {
     width: 450px;
@@ -73,4 +99,20 @@ body, html, .App, #root, .auth-wrapper {
 }
 .forgot-password a {
     color: #167bff;
+}
+
+.bi-bookmark-fill{
+    color: #00bc4f !important;
+}
+.card-body {
+    text-align: left;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0;
+    height: 70px;
+    width: 100%;
+    background: white;
+    border: 1px solid blue;
 }
