--- a/src/index.css
+++ b/src/index.css
@@ -15,21 +15,6 @@ code {
 @import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
-@media all and (max-width: 1024px){
-    .main-page-card{
-     width: 100%;
-    }
-
-    .prev-photo{
-        max-width: 25rem !important;
-        min-width: 25rem !important;
-        max-height: 25rem !important;
-        min-height: 25rem !important;
-    }
-/*브라우저 창 width가 1024px보다 작아지는 순간부터 적용*/
-/*태블릿*/
-
-}
 @media all and (max-width: 768px){
     .prev-photo{
         max-width: 18rem !important;
@@ -37,34 +22,112 @@ code {
         max-height: 18rem !important;
         min-height: 18rem !important;
     }
+    .navbar{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important;
+    }
+    .fixed-top{
+        right: auto !important;
+        left: auto !important;
+    }
+    .footer{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important
+    }
+    .auth-inner{
+        padding-bottom: 280px !important;
+        padding-top: 250px !important;
+    }
+    .sign-up-inner{
+        padding-bottom: 165px !important;
+        padding-top: 140px !important;
+    }
+    .forgot-password-inner{
+        padding-bottom: 310px !important;
+        padding-top: 280px !important;
+    }
 /*브라우저 창 width가 768px보다 작아지는 순간부터 적용*/
 /*모바일*/
 
 }
 @media all and (min-width: 768px){
     .prev-photo{
-        max-width: 25rem !important;
-        min-width: 25rem !important;
-        max-height: 25rem !important;
-        min-height: 25rem !important;
+        max-width: 22.4rem !important;
+        min-width: 22.4rem !important;
+        max-height: 22.4rem !important;
+        min-height: 22.4rem !important;
+    }
+    .navbar{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important;
+    }
+    .fixed-top{
+        right: auto !important;
+        left: auto !important;
+    }
+    .footer{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important
     }
 /*브라우저 창 width가 768px보다 커지는 순간부터 적용*/
 /*태블릿*/
+
+}
+@media all and (max-width: 1024px){
+    .main-page-card{
+        width: 100%;
+    }
+
+    .prev-photo{
+        max-width: 22.4rem !important;
+        min-width: 22.4rem !important;
+        max-height: 22.4rem !important;
+        min-height: 22.4rem !important;
+    }
+    /*브라우저 창 width가 1024px보다 작아지는 순간부터 적용*/
+    /*태블릿*/
 
 }
 @media all and (min-width: 1024px){
     html{
     }
     .topHeaderDropDown{
-        display: none;
+        display: block;
+        position: relative;
+        left: 275px;
     }
 
     .prev-photo{
-        max-width: 25rem !important;
-        min-width: 25rem !important;
-        max-height: 25rem !important;
-        min-height: 25rem !important;
+        max-width: 22.4rem !important;
+        min-width: 22.4rem !important;
+        max-height: 22.4rem !important;
+        min-height: 22.4rem !important;
     }
+    .navbar{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important;
+    }
+    .fixed-top{
+        right: auto !important;
+        left: auto !important;
+    }
+    .footer{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        max-height: 4rem !important;
+        min-height: 4rem !important
+    }
+
 /*브라우저 창 width가 1024px보다 커지는 순간부터 적용*/
 /*데스크탑*/
 
@@ -84,6 +147,8 @@ h1,h2,h3,h4,h5,h6,label,span {
 }
 
 .App, #root{
+    display: flex;
+    place-content: center;
     text-align: -webkit-center;
     width: 100%;
     height: 80%;
@@ -92,10 +157,9 @@ h1,h2,h3,h4,h5,h6,label,span {
 .main-wrapper {
     text-align: -webkit-center;
     position: relative;
-    margin-top: 60px;
-    margin-bottom: 70px;
+    margin-top: 66px;
+    margin-bottom: 50px;
     max-width: 1000px;
-    border: 1px solid blueviolet;
     height: 100%;
     width: 100%;
 }
@@ -103,7 +167,6 @@ h1,h2,h3,h4,h5,h6,label,span {
 .content-wrapper {
     text-align: -webkit-center;
     margin: 10px;
-    border: 1px solid blue;
     height: 100%;
 }
 
@@ -111,7 +174,10 @@ h1,h2,h3,h4,h5,h6,label,span {
     display: none!important;
 }
 .navbar {
+    padding: 0 !important;
+    min-height: 60px;
     text-align: -webkit-center;
+    border: 0.5px solid gray;
 }
 .navbar-light {
     background-color: #ffffff;
@@ -120,7 +186,6 @@ h1,h2,h3,h4,h5,h6,label,span {
 .auth-wrapper {
     display: flex;
     justify-content: center;
-    margin-top: 150px;
 }
 .auth-inner {
     min-width: 400px;
@@ -170,7 +235,7 @@ h1,h2,h3,h4,h5,h6,label,span {
     height: 70px;
     width: 100%;
     background: white;
-    border: 1px solid blue;
+    border: 0.5px solid gray;
 }
 
 .custom-ui{
@@ -179,6 +244,8 @@ h1,h2,h3,h4,h5,h6,label,span {
 .input-file-button{
     font-size: xx-large;
     margin-top: 10px;
+    margin-bottom: 10px;
+    color: black;
 }
 
 .comment-filed{
@@ -189,15 +256,37 @@ h1,h2,h3,h4,h5,h6,label,span {
     max-height: 120px;
 }
 .card-img-top{
+    border-top: 0.1px solid black;
+    border-radius: 0 !important;
     min-height: 335px;
     max-height: 335px;
 }
 
 .delete-post-button{
     position: relative;
-    left: 110px;
+    left: 220px;
 }
 
 .add-post-form{
     min-height: 710px;
+    background-color: white;
+}
+
+.main-page-card{
+    border-radius: 0 !important;
+    margin-bottom: 0.1rem !important;
+}
+
+.header-alim-icon{
+    position: relative;
+    left: -5px;
+}
+.header-airplane-icon{
+    position: relative;
+    top: -2px;
+}
+.line {
+    border-left: 1px solid black;
+    height: 1em; /* 혹은 다른 적절한 값 */
+    margin: 0 1em; /* 원하는 위치에 조정 가능 */
 }
