--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -18,7 +18,7 @@
 }
 
 .text-limit {
-    width:100%;
+    width:45%;
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
@@ -171,7 +171,7 @@
     font-weight: bold;
     min-width: 85px;
     position: relative;
-    top: 8px;
+    top: 5px;
     left: 9px;
 }
 
@@ -257,13 +257,14 @@
 }
 
 .comment-profile-img-box{
-    width: 90px;
-    height: 22px;
+    width: 35px;
+    height: 35px;
     border-radius: 70%;
     border: 0.5px solid black;
     overflow: hidden;
     margin-right:6px;
     margin-left:6px;
+    margin-bottom: 6px;
 }
 .comment-profile-img{
     width: 100%;
@@ -272,10 +273,37 @@
     background-color: whitesmoke;
 }
 
+.my-profile-img-box{
+    width: 90px;
+    height: 90px;
+    border-radius: 70%;
+    border: 0.5px solid black;
+    overflow: hidden;
+}
+.my-profile-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: whitesmoke;
+}
 
 .like-follow-button{
     max-height: 30px;
     margin-top: 10px;
     margin-right: 6px;
     font-size: 12px !important;
+}
+
+.my-feed-img{
+    max-width: 130px;
+    max-height: 130px;
+    width: 100%;
+    height: 100%;
+}
+
+.my-img-field{
+    width: 32% !important;
+    margin: 1px;
+    padding : 12px;
+    border : 1px solid black;
 }
