--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -18,7 +18,7 @@
 }
 
 .text-limit {
-    width:45%;
+    width:90%;
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
@@ -294,16 +294,17 @@
     font-size: 12px !important;
 }
 
-.my-feed-img{
-    max-width: 130px;
-    max-height: 130px;
-    width: 100%;
-    height: 100%;
+.my-img-field {
+    border : 1px solid white;
+    width: 100px; /* 원하는 틀의 가로 크기를 설정하세요 */
+    height: 120px; /* 원하는 틀의 세로 크기를 설정하세요 */
+    overflow: hidden; /* 틀을 벗어나는 이미지를 숨깁니다 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.my-img-field{
-    width: 32% !important;
-    margin: 1px;
-    padding : 12px;
-    border : 1px solid black;
+.my-img-field img {
+    width: 130px;
+    height: 100%; /* 세로 크기를 자동으로 조정하여 비율을 유지합니다 */
 }
