--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ code {
         max-width: 24.4rem !important;
         min-width: 24.4rem !important;
     }
+    .App{
+        max-width: 24.4rem !important;
+        min-width: 24.4rem !important;
+        min-height: 55rem !important;
+    }
 /*브라우저 창 width가 768px보다 작아지는 순간부터 적용*/
 /*모바일*/
 
@@ -126,8 +131,6 @@ code {
 
 }
 @media all and (min-width: 1024px){
-    html{
-    }
     .topHeaderDropDown{
         display: block;
         position: relative;
@@ -192,8 +195,7 @@ h1,h2,h3,h4,h5,h6,label,span {
     place-content: center;
     text-align: -webkit-center;
     width: 100%;
-    height: 100%;
-
+    /*height: 100vh;*/
 }
 .App{
     overflow: hidden !important;
@@ -205,11 +207,6 @@ h1,h2,h3,h4,h5,h6,label,span {
     position: relative;
     margin-top: 63px;
     margin-bottom: 50px;
-    min-height: 718px;
-
-    max-width: 1000px;
-    height: 100%;
-    width: 100%;
 }
 
 .content-wrapper {
@@ -238,6 +235,7 @@ h1,h2,h3,h4,h5,h6,label,span {
 .auth-inner {
     min-width: 400px;
     max-width: 500px;
+    height: 100vh;
     justify-content: center;
     padding: 40px 55px 45px 55px;
     border-radius: 15px;
@@ -288,10 +286,8 @@ h1,h2,h3,h4,h5,h6,label,span {
     border : black;
 }
 .input-file-button{
-    font-size: xx-large;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    color: black;
+    width: 100%;
+    height: 100%;
 }
 
 .comment-filed{
@@ -335,4 +331,48 @@ h1,h2,h3,h4,h5,h6,label,span {
     border-left: 1px solid black;
     height: 1em; /* 혹은 다른 적절한 값 */
     margin: 0 1em; /* 원하는 위치에 조정 가능 */
+}
+
+.follow-block {
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-top: 1px solid #000; /* 위쪽에 1px 두께의 선 추가 */
+    border-bottom: 1px solid #000; /* 아래쪽에 1px 두께의 선 추가 */
+}
+
+.common-button {
+    width: 140px;
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.unfollow-button {
+    width: 140px;
+    margin-right: 50px;
+    background-color: #e74c3c;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.follow-button{
+    margin-right: 50px;
+}
+
+.prf-upload-button{
+    display: none;
+}
+
+.comment-user-img{
+    float: left;
+}
+.comment-wrap-2{
+    width: 280px;
 }
