--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@ code {
         max-height: 18rem !important;
         min-height: 18rem !important;
     }
-    .navbar{
-        max-width: 24.4rem !important;
-        min-width: 24.4rem !important;
-        max-height: 4rem !important;
-        min-height: 4rem !important;
-    }
+    /*.navbar{*/
+    /*    max-width: 24.4rem !important;*/
+    /*    min-width: 24.4rem !important;*/
+    /*    max-height: 4rem !important;*/
+    /*    min-height: 4rem !important;*/
+    /*}*/
     .fixed-top{
         right: auto !important;
         left: auto !important;
@@ -74,12 +74,12 @@ code {
         max-height: 22.4rem !important;
         min-height: 22.4rem !important;
     }
-    .navbar{
-        max-width: 24.4rem !important;
-        min-width: 24.4rem !important;
-        max-height: 4rem !important;
-        min-height: 4rem !important;
-    }
+    /*.navbar{*/
+    /*    max-width: 24.4rem !important;*/
+    /*    min-width: 24.4rem !important;*/
+    /*    max-height: 4rem !important;*/
+    /*    min-height: 4rem !important;*/
+    /*}*/
     .fixed-top{
         right: auto !important;
         left: auto !important;
@@ -111,7 +111,6 @@ code {
     .main-page-card{
         width: 100%;
     }
-
     .prev-photo{
         max-width: 22.4rem !important;
         min-width: 22.4rem !important;
@@ -128,7 +127,6 @@ code {
         max-width: 24.4rem !important;
         min-width: 24.4rem !important;
     }
-
 }
 @media all and (min-width: 1024px){
     .topHeaderDropDown{
@@ -136,19 +134,18 @@ code {
         position: relative;
         left: 275px;
     }
-
     .prev-photo{
         max-width: 22.4rem !important;
         min-width: 22.4rem !important;
         max-height: 22.4rem !important;
         min-height: 22.4rem !important;
     }
-    .navbar{
-        max-width: 24.4rem !important;
-        min-width: 24.4rem !important;
-        max-height: 4rem !important;
-        min-height: 4rem !important;
-    }
+    /*.navbar{*/
+    /*    max-width: 24.4rem !important;*/
+    /*    min-width: 24.4rem !important;*/
+    /*    max-height: 4rem !important;*/
+    /*    min-height: 4rem !important;*/
+    /*}*/
     .fixed-top{
         right: auto !important;
         left: auto !important;
@@ -197,10 +194,7 @@ h1,h2,h3,h4,h5,h6,label,span {
     width: 100%;
     /*height: 100vh;*/
 }
-.App{
-    overflow: hidden !important;
-    border: 1px solid black;
-}
+.App{}
 
 .main-wrapper {
     text-align: -webkit-center;
@@ -222,34 +216,12 @@ h1,h2,h3,h4,h5,h6,label,span {
     padding: 0 !important;
     min-height: 60px;
     text-align: -webkit-center;
-    border: 0.5px solid gray;
+    width: 100%;
+    max-width:390px;
 }
 .navbar-light {
     background-color: #ffffff;
     box-shadow: 0 14px 80px rgba(34, 35, 58, 0.2);
-}
-.auth-wrapper {
-    display: flex;
-    justify-content: center;
-}
-.auth-inner {
-    min-width: 400px;
-    max-width: 500px;
-    height: 100vh;
-    justify-content: center;
-    padding: 40px 55px 45px 55px;
-    border-radius: 15px;
-    transition: all .3s;
-}
-.auth-wrapper .form-control:focus {
-    border-color: #167bff;
-    box-shadow: none;
-}
-.auth-wrapper h3 {
-    text-align: center;
-    margin: 0;
-    line-height: 1;
-    padding-bottom: 20px;
 }
 .custom-control-label {
     font-weight: 400;
@@ -312,7 +284,7 @@ h1,h2,h3,h4,h5,h6,label,span {
     margin-bottom: 0.1rem !important;
 }
 
-.header-alim-icon{
+.headerheader-alim-icon{
     position: relative;
     left: -5px;
 }
