--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -167,7 +167,7 @@
 }
 
 .post-date-time{
-    color: gray;
+    color: rgb(128, 128, 128);
     font-size: 11px;
     font-weight: bold;
     min-width: 85px;
