--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -256,6 +256,13 @@
     object-fit: cover;
     background-color: whitesmoke;
 }
+.card-header-profile{
+    transform: scale(0.6);
+    width: 48px;
+    height: 48px;
+    border-radius: 70%;
+    border: 0.5px solid black;
+}
 
 .comment-profile-img-box{
     width: 35px;
