재부팅으로 ip변경 / 화면단 스크롤 버그수정

--- a/src/css/layout/layout.css
+++ b/src/css/layout/layout.css
@@ -1,15 +1,17 @@
 .layout-side{
-    border: 0.5px solid rgb(128, 128, 128);
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    max-height: calc(100vh - 130px);
-    width: 100%;
-    min-width:383px;
-    max-width:390px;
+    /*border: 0.5px solid rgb(128, 128, 128);*/
+    /*margin-top: 60px;*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*flex-grow: 1 !important;*/
+    /*width: 100%;*/
+    /*overflow-x: hidden;*/
+    /*overflow-y: auto;*/
+    /*max-height: calc(100vh - 120px);*/
+}
+
+.layout-header{
+    margin-bottom: 60px;
 }
 
 .layout-footer {
