--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,11 @@ h1,h2,h3,h4,h5,h6,label,span {
     width: 100%;
 }
 
+.tap-style{
+    font-size: 15px;
+    color: #00000042; /* 텍스트 색상 */
+}
+
 .main-wrapper {
     text-align: -webkit-center;
     position: relative;
