알림 무한스크롤, notfound텍스트 분기추가 등 수정

--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -321,6 +321,10 @@
     color: rgba(0, 0, 0, 0.4);
 }
 
+.alim-cont-wrapper {
+    margin-bottom: 20px;
+}
+
 .alim-cont-div{
     font-size: small;
     text-align: left;
