모달 사이즈 수정

--- a/src/css/modal/modal.css
+++ b/src/css/modal/modal.css
@@ -14,14 +14,15 @@
     border: 0;
 }
 .modal > section {
+    height: 50%;
     width: 90%;
-    max-width: 450px;
+    max-width: 390px;
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
-    overflow: hidden;
+    overflow: auto;
 }
 .modal > section > header {
     position: relative;
